--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/lab": "^7.0.0-beta.15",
+    "@mui/material": "^7.3.0",
+    "@prisma/client": "^6.13.0",
+    "jose": "^6.0.12",
+    "lucide-react": "^0.536.0",
+    "next": "15.4.5",
+    "next-auth": "^5.0.0-beta.29",
+    "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.5"
+    "styled-components": "^6.1.19",
+    "zod": "^4.0.14"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@types/styled-components": "^5.1.34",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
