--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "zod": "^4.0.14"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
