--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@faker-js/faker": "^9.9.0",
     "@mui/lab": "^7.0.0-beta.15",
     "@mui/material": "^7.3.0",
     "@prisma/client": "^6.13.0",
