--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "styled-components": "^6.1.19",
+    "tailwind-scrollbar": "^4.0.2",
     "zod": "^4.0.14"
   },
   "devDependencies": {
